Home products medium display fix + texts update

--- a/src/app/components/home/home-products/home-products.component.html
+++ b/src/app/components/home/home-products/home-products.component.html
@@ -15,7 +15,7 @@
                 class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div"
               >
                 <div class="padding-left-2">
-                  <h3>WifiPlug</h3>
+                  <h3>WIFIPLUG</h3>
                   <h5>
                     Simplify, schedule and automate daily life.
                   </h5>
@@ -56,7 +56,7 @@
               class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div"
             >
               <div class="padding-left-5 ml-2">
-                <h3>ServicePlug</h3>
+                <h3>SERVICEPLUG</h3>
                 <h5>
                   Manage your appliances, and extend their lifespan.
                 </h5>
@@ -166,14 +166,14 @@
     <!-- SMALLER DISPLAY - TWO ROWS (not displayed on large screens) -->
     <div class="row mr-0 row-small">
       <!-- FIRST ROW -->
-      <div class="row m-0 height-vp-full-with-header">
+      <div class="row height-vp-full-with-header">
         <div class="col product-col">
           <div
             class="product-content height-100 border-col gradient-background"
           >
             <div id="wifiplug-col" class="product-background height-100">
               <div
-                class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10"
+                class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div"
               >
                 <div class="padding-left-2">
                   <h3>WifiPlug</h3>
@@ -213,7 +213,7 @@
         >
           <div class="product-content height-100">
             <div
-              class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10"
+              class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div"
             >
               <div class="padding-left-4">
                 <h3>ServicePlug</h3>
@@ -248,14 +248,14 @@
         </div>
       </div>
       <!-- SECOND ROW -->
-      <div class="row m-0 height-vp-full-with-header small-display-second-row">
+      <div class="row height-vp-full-with-header small-display-second-row">
         <div class="col product-col">
           <div
             class="product-content height-100 border-col gradient-background"
           >
             <div id="whitelabel-col" class="product-background height-100">
               <div
-                class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10"
+                class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div"
               >
                 <div class="padding-left-2">
                   <h3>White Labeling</h3>
@@ -292,7 +292,7 @@
         >
           <div class="product-content height-100">
             <div
-              class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10"
+              class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div"
             >
               <div class="padding-left-4">
                 <h3>Consulting</h3>
