--- a/src/app/components/home/our-offer/our-offer.component.html
+++ b/src/app/components/home/our-offer/our-offer.component.html
@@ -1,16 +1,22 @@
 <article id="offer-article" class="margin-bottom-6 background-color-light">
-  <div class="padding-left-2 padding-right-2 padding-top-6 padding-bottom-6 text-center">
-    <h3 class="text-color-primary font-weight-bold">Our offer to you...</h3>
+  <div
+    class="padding-left-2 padding-right-2 padding-top-6 padding-bottom-6 text-center"
+  >
+    <h3 class="text-color-primary font-weight-bold">
+      Our Solution Is Built For Everyone
+    </h3>
     <h5 class="text-color-secondary m-0">
-      Consumer or manufacturer, our solution is for you!
+      myma is designed with consumers and manufacturers in mind.
     </h5>
   </div>
   <div class="container-fluid">
     <app-tabs>
-      <app-tab tabTitle="I'm a Manufacturer">
+      <app-tab tabTitle="I'm a manufacturer">
         <div class="container">
           <div class="row m-0">
-            <div class="col-xl d-flex flex-column align-items-center margin-top-3">
+            <div
+              class="col-xl d-flex flex-column align-items-center margin-top-3"
+            >
               <div class="card">
                 <div class="card-body">
                   <img
@@ -18,17 +24,17 @@
                     class="offer-icon margin-bottom-1"
                     alt="Offer icon"
                   />
-                  <h5 class="card-title">White Label / Own Brand</h5>
+                  <h5 class="card-title">Your brand.</h5>
                   <p class="card-text">
-                    Our turn key solution has been built with over 40,000
-                    developer hours and can be fully white labelled allowing
-                    your company to 'Buy not build' at an incredible cost
-                    advantage.
+                    Over 40,000 hours have gone into creating myma’s turnkey
+                    solution which can be white labelled from start to finish.
                   </p>
                 </div>
               </div>
             </div>
-            <div class="col-xl d-flex flex-column align-items-center margin-top-3">
+            <div
+              class="col-xl d-flex flex-column align-items-center margin-top-3"
+            >
               <div class="card">
                 <div class="card-body">
                   <img
@@ -36,16 +42,17 @@
                     class="offer-icon margin-bottom-1"
                     alt="Offer icon"
                   />
-                  <h5 class="card-title">Customer Interaction</h5>
+                  <h5 class="card-title">Customer interaction.</h5>
                   <p class="card-text">
-                    Building relationships with your customers can be hard,
-                    especially if you're not present at the point of sale. Our
-                    technology will help you bridge the gap.
+                    myma keeps you and your customers connected at all times.
+                    Difficulties in customer relations are a thing of the past.
                   </p>
                 </div>
               </div>
             </div>
-            <div class="col-xl d-flex flex-column align-items-center margin-top-3">
+            <div
+              class="col-xl d-flex flex-column align-items-center margin-top-3"
+            >
               <div class="card">
                 <div class="card-body">
                   <img
@@ -53,10 +60,11 @@
                     class="offer-icon margin-bottom-1"
                     alt="Offer icon"
                   />
-                  <h5 class="card-title">Extending Appliance Lifespan</h5>
+                  <h5 class="card-title">Extended appliance lifespan.</h5>
                   <p class="card-text">
-                    We can detect faults ahead of time allowing you to take
-                    action sooner.
+                    myma’s predictive fault detection gives you insights like
+                    never before. Issues can now be fixed, actioned or otherwise
+                    remedied before they happen.
                   </p>
                 </div>
               </div>
@@ -64,10 +72,12 @@
           </div>
         </div>
       </app-tab>
-      <app-tab tabTitle="I'm a Consumer">
+      <app-tab tabTitle="I'm a consumer">
         <div class="container">
           <div class="row m-0">
-            <div class="col-xl d-flex flex-column align-items-center margin-top-3">
+            <div
+              class="col-xl d-flex flex-column align-items-center margin-top-3"
+            >
               <div class="card">
                 <div class="card-body">
                   <img
@@ -75,16 +85,18 @@
                     class="offer-icon margin-bottom-1"
                     alt="Offer icon"
                   />
-                  <h5 class="card-title">Extended Warranty</h5>
+                  <h5 class="card-title">Extended warranty.</h5>
                   <p class="card-text">
-                    Claim an extended warranty when you connect your appliances
-                    (Washing machine, dishwasher, drier & fridge) to your
-                    manufacturer.
+                    Manufacturers on the myma platform will instantly offer an
+                    extended warranty on your washing machine, dishwasher, drier
+                    or fridge just for having it connected.
                   </p>
                 </div>
               </div>
             </div>
-            <div class="col-xl d-flex flex-column align-items-center margin-top-3">
+            <div
+              class="col-xl d-flex flex-column align-items-center margin-top-3"
+            >
               <div class="card">
                 <div class="card-body">
                   <img
@@ -92,20 +104,18 @@
                     class="offer-icon margin-bottom-1"
                     alt="Offer icon"
                   />
-                  <h5 class="card-title">Real Time Notifications</h5>
-                  <div class="card-text">
-                    <ul>
-                      <li>Wash Cycles</li>
-                      <li>Overload Protection</li>
-                      <li>Maintenance Info</li>
-                      <li>Cost per wash</li>
-                      <li>Tips & Tricks</li>
-                    </ul>
-                  </div>
+                  <h5 class="card-title">Real-time notifications.</h5>
+                  <p class="card-text">
+                    Push notifications are available for wash cycles, overload
+                    protection, maintenance information, general tips and tricks
+                    and more for your appliance.
+                  </p>
                 </div>
               </div>
             </div>
-            <div class="col-xl d-flex flex-column align-items-center margin-top-3">
+            <div
+              class="col-xl d-flex flex-column align-items-center margin-top-3"
+            >
               <div class="card">
                 <div class="card-body">
                   <img
@@ -113,11 +123,10 @@
                     class="offer-icon margin-bottom-1"
                     alt="Offer icon"
                   />
-                  <h5 class="card-title">Your Usage</h5>
+                  <h5 class="card-title">Energy usage.</h5>
                   <p class="card-text">
-                    Lower your electricity bill with useful insights based on
-                    your individual consumption. Know the exact cost of your
-                    next wash.
+                    myma’s energy cost calculator gives you another level of
+                    granularity to help you reduce energy consumption and cost.
                   </p>
                 </div>
               </div>
