--- a/src/app/components/products/serviceplug/consumers/consumers-banner/consumers-banner.component.html
+++ b/src/app/components/products/serviceplug/consumers/consumers-banner/consumers-banner.component.html
@@ -31,7 +31,7 @@
       <div>
         <div class="text-color-light">
           <h1 class="font-weight-bold padding-bottom-1">
-            Consumer benefits
+            Consumer Benefits
           </h1>
           <h4 class="padding-bottom-1">
             Save money, extend the machine's life and get an extended warranty!
