--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid padding-3 padding-bottom-2">
     <div class="row m-0">
       <div
-        class="col-sm-3 d-flex flex-column text-color-primary-light margin-bottom-1"
+        class="col-lg-3 d-flex flex-column text-color-primary-light margin-bottom-1"
       >
         <img
           class="myma-logo"
@@ -10,44 +10,50 @@
           alt="myma logo"
         />
         <a>
-          Myma provides both manufacturers and consumers insight into their
-          appliances.
+          myma gives manufacturers and consumers insight into their appliances
+          like never before.
         </a>
       </div>
-      <div
-        class="col-sm-3 d-flex flex-column text-color-primary-light margin-bottom-1"
-      >
-        <h5 class="font-weight-bold text-color-primary">About Us</h5>
-        <a routerLink="/company">What is myma?</a>
-        <a href="/company#team">Meet the team</a>
-        <a href="/company#vacancies">We're hiring</a>
-        <a href="/assets/pdf/invest.pdf">Invest in myma</a>
-        <a routerLink="/contact">Get in touch</a>
-      </div>
-      <div
-        class="col-sm-3 d-flex flex-column text-color-primary-light margin-bottom-1"
-      >
-        <h5 class="font-weight-bold text-color-primary">Products</h5>
-        <a href="https://wifiplug.co.uk/">Wifiplug, our B2C product</a>
-        <a routerLink="/serviceplug">ServicePlug</a>
-        <a routerLink="/whitelabel">White Labeling</a>
-        <a routerLink="/consulting">Consulting</a>
-        <a href="https://developer.wifiplug.io/">Developer Docs</a>
-      </div>
-      <div
-        class="col-sm-3 d-flex flex-column text-color-primary-light margin-bottom-1"
-      >
-        <h5 class="font-weight-bold text-color-primary">Stay up to date</h5>
-        <a>Subscribe to our newsletter for frequent updates.</a>
-        <div class="container-fluid">
-          <form
-            class="newsletter-form row"
-            name="newsletter-form"
-            data-name="Newsletter Form"
-          >
-              <input class="col-8 form-control email-field" type="email" name="email" />
+      <div class="col-lg-9 pr-0 row m-0 second-col">
+        <div
+          class="col-md-4 d-flex flex-column text-color-primary-light margin-bottom-1"
+        >
+          <h5 class="font-weight-bold text-color-primary">About Us</h5>
+          <a routerLink="/company">What is myma?</a>
+          <a href="/company#team">Meet the team</a>
+          <a href="/company#vacancies">We're hiring</a>
+          <a href="/assets/pdf/invest.pdf">Invest in myma</a>
+          <a routerLink="/contact">Get in touch</a>
+        </div>
+        <div
+          class="col-md-4 d-flex flex-column text-color-primary-light margin-bottom-1"
+        >
+          <h5 class="font-weight-bold text-color-primary">Products</h5>
+          <a href="https://wifiplug.co.uk/">WIFIPLUG</a>
+          <a routerLink="/serviceplug">SERVICEPLUG</a>
+          <a routerLink="/whitelabel">White labelling</a>
+          <a routerLink="/consulting">Consulting</a>
+          <a href="https://developer.wifiplug.io/">Developer documentation</a>
+        </div>
+        <div
+          class="col-md-4 d-flex flex-column text-color-primary-light margin-bottom-1"
+        >
+          <h5 class="font-weight-bold text-color-primary">Stay Up To Date</h5>
+          <a>Subscribe to our newsletter for frequent updates.</a>
+          <div class="container-fluid">
+            <form
+              class="newsletter-form row"
+              name="newsletter-form"
+              data-name="Newsletter Form"
+            >
+              <input
+                class="col-8 form-control email-field"
+                type="email"
+                name="email"
+              />
               <button class="col-4 btn btn-primary email-button">Go</button>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
     </div>
