--- a/src/app/components/company/vacancies/vacancies.component.html
+++ b/src/app/components/company/vacancies/vacancies.component.html
@@ -5,7 +5,7 @@
   <div class="row m-0">
     <div class="padding-bottom-2 width-100">
       <h3 class="text-color-light font-weight-bold mb-0 text-center">
-        Current vacancies
+        Current Vacancies
       </h3>
     </div>
   </div>
