--- a/src/app/components/home/home-products/home-products.component.scss
+++ b/src/app/components/home/home-products/home-products.component.scss
@@ -14,6 +14,13 @@ article .container-fluid .row .col-lg:nth-child(odd),
 /*********************************************************************************************/
 // Mobile version styles
 /*********************************************************************************************/
+@media (max-width: 1200px) {
+  .content-div {
+    padding-left: 10%;
+    padding-right: 15%;
+  }
+}
+
 @media (max-width: 576px) {
   .first-col {
     margin-top: -10%;
@@ -23,7 +30,7 @@ article .container-fluid .row .col-lg:nth-child(odd),
   .product-col {
     transform: rotate(10deg);
     margin-left: -15%;
-    min-width: 130% !important;
+    min-width: 135% !important;
   }
 
   .border-col,
@@ -53,6 +60,7 @@ article .container-fluid .row .col-lg:nth-child(odd),
   .content-div {
     padding-left: 18%;
     padding-right: 15%;
+    padding-bottom: 15rem !important;
   }
 
   // Fixes the space below the second button on mobile
@@ -64,30 +72,7 @@ article .container-fluid .row .col-lg:nth-child(odd),
 /*********************************************************************************************/
 // Large screens styles
 /*********************************************************************************************/
-@media (min-width: 576px) {
-  .height-vp-full-with-header {
-    height: calc(100vh - 80px - 0.3rem);
-  }
-
-  #products-container {
-    position: absolute !important;
-  }
-
-  .product-content {
-    transform: rotate(-10deg);
-  }
-
-  .product-col {
-    transform: rotate(10deg) translateY(-10%);
-    padding: 0 !important;
-    height: 110vh;
-    transition: 0.1s ease-in;
-  }
-
-  .product-col:hover {
-    flex-grow: 2;
-  }
-
+@media (min-width: 1200px) {
   // Transitions and styles for the content divs that appear on hover
   .product-col:hover .product-presentation {
     padding-right: 5rem;
@@ -111,6 +96,31 @@ article .container-fluid .row .col-lg:nth-child(odd),
     transform: translateY(20px) scale(0.5);
   }
 
+  .product-col:hover {
+    flex-grow: 2;
+  }
+}
+
+@media (min-width: 576px) {
+  .height-vp-full-with-header {
+    height: calc(100vh - 80px - 0.3rem);
+  }
+
+  #products-container {
+    position: absolute !important;
+  }
+
+  .product-content {
+    transform: rotate(-10deg);
+  }
+
+  .product-col {
+    transform: rotate(10deg) translateY(-10%);
+    padding: 0 !important;
+    height: 110vh;
+    transition: 0.1s ease-in;
+  }
+
   .border-col {
     margin-left: -50%;
     margin-right: -50%;
@@ -125,13 +135,13 @@ article .container-fluid .row {
 }
 
 // Allows to have 4 columns on large screens, and 2 columns otherwise
-@media (max-width: 576px), (min-width: 992px) {
+@media (max-width: 576px), (min-width: 1200px) {
   .row-small {
     display: none;
   }
 }
 
-@media (min-width: 576px) and (max-width: 992px) {
+@media (min-width: 576px) and (max-width: 1200px) {
   .row-large {
     display: none;
   }
