--- a/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
+++ b/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
@@ -1,5 +1,3 @@
-
-
 <div
   class="container-fluid p-0 height-vp-full spacing-0 background-color-primary"
 >
@@ -15,7 +13,7 @@
     >
       <div class="text-color-light">
         <h1 class="font-weight-bold padding-bottom-1">
-          Manufacturer benefits
+          Manufacturer Benefits
         </h1>
         <h4 class="padding-bottom-1 text-center">
           Your brand, your customers, your machines, your data, one platform -
