Contact page update

--- a/src/app/components/company/company-banner/company-banner.component.html
+++ b/src/app/components/company/company-banner/company-banner.component.html
@@ -6,6 +6,7 @@
       <img
         class="width-100 company-banner-image height-vp-full"
         src="assets/images/Mindspace_WifiPlug_6006.jpg"
+        alt="Team image"
       />
     </div>
     <div
@@ -13,7 +14,7 @@
     >
       <div class="text-color-light">
         <h1 class="font-weight-bold padding-bottom-1">
-          Hi, we're myma!
+          Hi, We're myma!
         </h1>
         <h4 class="padding-bottom-1 text-center">
           We're on a mission to provide industry leading IoT services.
