--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,38 +1,57 @@
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
-<p>contact works!</p>
+<div class="container-fluid p-0 height-vp-full spacing-0">
+  <div class="row m-0 height-vp-full">
+    <div class="col-lg-7 p-0 image-col"></div>
+    <div
+      class="col-lg-5 padding-right-5 height-100 d-flex flex-column company-banner-right text-center background-color-primary"
+    >
+      <div class="text-color-light">
+        <h1 class="font-weight-bold padding-bottom-1">
+          Get In Touch
+        </h1>
+        <h4 class="padding-bottom-1 text-center">
+          Want to speak to us? <br />
+          Call us on
+          <a class="text-color-light" href="tel:+443333449434"
+            ><u>+44 33 33 44 9434</u></a
+          >
+        </h4>
+
+        <h4 class="text-center">
+          Follow us for all the latest!
+        </h4>
+      </div>
+      <div class="d-flex justify-content-center">
+        <a class="mx-3 network-link" href="https://facebook.com/wifiplug">
+          <img
+            class="network-image"
+            src="assets/images/facebook.png"
+            alt="Facebook icon"
+          />
+        </a>
+        <a class="mx-3 network-link" href="https://linkedin.com/company/wifi-plug-ltd">
+          <img
+            class="network-image"
+            src="assets/images/linkedin.png"
+            alt="Linkedin icon"
+          />
+        </a>
+        <a class="mx-3 network-link" href="https://www.instagram.com/wifiplug/">
+          <img
+            class="network-image"
+            src="assets/images/instagram.png"
+            alt="Instagram icon"
+          />
+        </a>
+        <a class="mx-3 network-link" href="https://twitter.com/wifiplug">
+          <img
+            class="network-image"
+            src="assets/images/twitter.png"
+            alt="Twitter icon"
+          />
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
 
 <app-footer></app-footer>
