--- a/src/assets/css/shared/colors.scss
+++ b/src/assets/css/shared/colors.scss
@@ -9,26 +9,26 @@
 }
 
 .text-color-primary {
-  color: var(--bg-primary);
+  color: var(--bg-primary) !important;
 }
 .text-color-primary-light {
-  color: var(--bg-primary-light);
+  color: var(--bg-primary-light) !important;
 }
 .text-color-secondary {
-  color: var(--bg-secondary);
+  color: var(--bg-secondary) !important;
 }
 .text-color-light {
-  color: var(--bg-light);
+  color: var(--bg-light) !important;
 }
 
 .background-color-primary {
-  background-color: var(--bg-primary);
+  background-color: var(--bg-primary) !important;
 }
 .background-color-primary-light {
-  background-color: var(--bg-primary-light);
+  background-color: var(--bg-primary-light) !important;
 }
 .background-color-secondary {
-  background-color: var(--bg-secondary);
+  background-color: var(--bg-secondary) !important;
 }
 .background-color-light {
   background-color: var(--bg-light) !important;
