--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid p-0 height-vp-full spacing-0">
-  <div class="row m-0 height-vp-full">
-    <div class="col-lg-7 p-0 image-col"></div>
+  <div class="row m-0 height-vp-full contact-banner-row">
+    <div class="col-lg-7 p-0 contact-banner-left"></div>
     <div
-      class="col-lg-5 padding-right-5 height-100 d-flex flex-column company-banner-right text-center background-color-primary"
+      class="col-lg-5 padding-right-5 height-100 d-flex flex-column contact-banner-right text-center background-color-primary"
     >
       <div class="text-color-light">
         <h1 class="font-weight-bold padding-bottom-1">
