--- a/src/app/components/home/home-banner/home-banner.component.html
+++ b/src/app/components/home/home-banner/home-banner.component.html
@@ -1,4 +1,4 @@
-<div class="height-vp-full banner-div shadow-sm">
+<div class="img-fluid banner-div shadow-sm height-vp-full">
   <div
     class="height-100 padding-5 banner-text d-flex flex-column justify-content-center align-items-start"
   >
