--- a/src/app/components/company/company-banner/company-banner.component.html
+++ b/src/app/components/company/company-banner/company-banner.component.html
@@ -1,16 +1,15 @@
 <div
-  class="container-fluid p-0 height-vp-full spacing-0 background-color-primary"
+  class="container-fluid p-0 height-vp-full spacing-0"
 >
   <div class="row m-0 height-vp-full">
-    <div class="col-lg-7 p-0 image-col">
+    <div class="col-md-7 p-0 image-col">
       <img
         class="width-100 company-banner-image height-vp-full"
         src="assets/images/Mindspace_WifiPlug_6006.jpg"
-        alt="Team image"
       />
     </div>
     <div
-      class="col-lg-5 padding-right-5 height-100 d-flex flex-column company-banner-right text-center"
+      class="col-md-5 padding-right-5 height-100 d-flex flex-column company-banner-right text-center background-color-primary"
     >
       <div class="text-color-light">
         <h1 class="font-weight-bold padding-bottom-1">
@@ -25,11 +24,11 @@
           reliable and high quality products to tens of thousands of users.
         </p>
       </div>
-      <div class="margin-top-1">
+      <div class="margin-top-1 meet-button">
         <button
           type="button"
-          (click)="onMoreClick('team')"
-          class="btn btn-secondary font-weight-bold meet-button"
+          (click)="onMoreClick('team-anchor')"
+          class="btn btn-secondary font-weight-bold"
         >
           Meet the team
         </button>
