--- a/src/app/components/company/team/team.component.html
+++ b/src/app/components/company/team/team.component.html
@@ -1,5 +1,5 @@
 <div
-  id="team"
+  id="team-anchor"
   class="d-flex flex-column align-items-center padding-left-2 padding-right-2 padding-top-6 padding-bottom-6"
 >
   <h3 class="text-color-primary font-weight-bold mb-0">
