--- a/src/app/components/products/serviceplug/serviceplug-banner/serviceplug-banner.component.scss
+++ b/src/app/components/products/serviceplug/serviceplug-banner/serviceplug-banner.component.scss
@@ -1,31 +1,37 @@
+@media (max-width: 992px) {
+  .banner-text {
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
+  }
+}
+
 .serviceplug-logo {
   height: 32px;
 }
 
 @media (min-width: 992px) {
-    .banner-div {
-      width: 100vw;
-    }
-  }
-  
   .banner-div {
-    background-image: url(src/assets/images/shutterstock_1208917930.jpg);
-    background-size: cover;
-    background-position: center;
+    width: 100vw;
   }
-  
-  .banner-text {
-    background-image: -webkit-gradient(
-      linear,
-      left top,
-      left bottom,
-      from(rgba(0, 0, 0, 0.49)),
-      to(transparent)
-    );
-    background-image: linear-gradient(
-      180deg,
-      rgba(102, 46, 139, 0.3),
-      transparent
-    );
-  }
-  
+}
+
+.banner-div {
+  background-image: url(src/assets/images/shutterstock_1208917930.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.banner-text {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(0, 0, 0, 0.49)),
+    to(transparent)
+  );
+  background-image: linear-gradient(
+    180deg,
+    rgba(102, 46, 139, 0.3),
+    transparent
+  );
+}
