Mobile horizontal fix

--- a/src/app/components/home/home-products/home-products.component.html
+++ b/src/app/components/home/home-products/home-products.component.html
@@ -125,7 +125,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg product-col">
+        <div id="fourth-col" class="col-lg product-col">
           <div
             id="consulting-col"
             class="product-content height-100 border-col product-background"
