--- a/src/app/components/home/home-products/home-products.component.scss
+++ b/src/app/components/home/home-products/home-products.component.scss
@@ -14,14 +14,23 @@ article .container-fluid .row .col-lg:nth-child(odd),
 /*********************************************************************************************/
 // Mobile version styles
 /*********************************************************************************************/
-@media (max-width: 1200px) {
+@media (max-width: 991.9px) {
   .content-div {
     padding-left: 10%;
     padding-right: 15%;
   }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 575.9px) {
+  .border-col,
+  .product-content {
+    transform: rotate(-10deg);
+    height: 130% !important;
+    margin-top: -10%;
+  }
+}
+
+@media (max-width: 991.9px) {
   .first-col {
     margin-top: -10%;
     padding-top: 3rem;
@@ -37,7 +46,6 @@ article .container-fluid .row .col-lg:nth-child(odd),
   .product-content {
     transform: rotate(-10deg);
     height: 130% !important;
-    margin-top: -10%;
   }
 
   .with-border {
@@ -69,10 +77,16 @@ article .container-fluid .row .col-lg:nth-child(odd),
   }
 }
 
+@media (min-width: 576px) and (max-width: 991.9px) {
+  #fourth-col {
+    margin-top: -8% !important;
+  }
+}
+
 /*********************************************************************************************/
 // Large screens styles
 /*********************************************************************************************/
-@media (min-width: 1200px) {
+@media (min-width: 992px) {
   // Transitions and styles for the content divs that appear on hover
   .product-col:hover .product-presentation {
     padding-right: 5rem;
@@ -101,7 +115,7 @@ article .container-fluid .row .col-lg:nth-child(odd),
   }
 }
 
-@media (min-width: 576px) {
+@media (min-width: 992px) {
   .height-vp-full-with-header {
     height: calc(100vh - 80px - 0.3rem);
   }
@@ -134,17 +148,22 @@ article .container-fluid .row {
   overflow: hidden;
 }
 
+/*
 // Allows to have 4 columns on large screens, and 2 columns otherwise
-@media (max-width: 576px), (min-width: 1200px) {
+@media (max-width: 575.9px), (min-width: 1200px) {
   .row-small {
     display: none;
   }
 }
 
-@media (min-width: 576px) and (max-width: 1200px) {
+@media (min-width: 576px) and (max-width: 1199.9px) {
   .row-large {
     display: none;
   }
+}
+*/
+.row-small {
+  display: none;
 }
 
 .product-content {
