--- a/src/app/components/home/our-offer/our-offer.component.html
+++ b/src/app/components/home/our-offer/our-offer.component.html
@@ -15,7 +15,7 @@
         <div class="container">
           <div class="row m-0">
             <div
-              class="col-xl d-flex flex-column align-items-center margin-top-3"
+              class="col-sm d-flex flex-column align-items-center margin-top-3"
             >
               <div class="card">
                 <div class="card-body">
@@ -33,7 +33,7 @@
               </div>
             </div>
             <div
-              class="col-xl d-flex flex-column align-items-center margin-top-3"
+              class="col-sm d-flex flex-column align-items-center margin-top-3"
             >
               <div class="card">
                 <div class="card-body">
@@ -51,7 +51,7 @@
               </div>
             </div>
             <div
-              class="col-xl d-flex flex-column align-items-center margin-top-3"
+              class="col-sm d-flex flex-column align-items-center margin-top-3"
             >
               <div class="card">
                 <div class="card-body">
@@ -76,7 +76,7 @@
         <div class="container">
           <div class="row m-0">
             <div
-              class="col-xl d-flex flex-column align-items-center margin-top-3"
+              class="col-sm d-flex flex-column align-items-center margin-top-3"
             >
               <div class="card">
                 <div class="card-body">
@@ -95,7 +95,7 @@
               </div>
             </div>
             <div
-              class="col-xl d-flex flex-column align-items-center margin-top-3"
+              class="col-sm d-flex flex-column align-items-center margin-top-3"
             >
               <div class="card">
                 <div class="card-body">
@@ -114,7 +114,7 @@
               </div>
             </div>
             <div
-              class="col-xl d-flex flex-column align-items-center margin-top-3"
+              class="col-sm d-flex flex-column align-items-center margin-top-3"
             >
               <div class="card">
                 <div class="card-body">
