--- a/src/app/components/company/company-banner/company-banner.component.html
+++ b/src/app/components/company/company-banner/company-banner.component.html
@@ -2,14 +2,14 @@
   class="container-fluid p-0 height-vp-full spacing-0"
 >
   <div class="row m-0 height-vp-full">
-    <div class="col-md-7 p-0 image-col">
+    <div class="col-sm-7 p-0 image-col">
       <img
         class="width-100 company-banner-image height-vp-full"
         src="assets/images/Mindspace_WifiPlug_6006.jpg"
       />
     </div>
     <div
-      class="col-md-5 padding-right-5 height-100 d-flex flex-column company-banner-right text-center background-color-primary"
+      class="col-sm-5 padding-right-5 height-100 d-flex flex-column company-banner-right text-center background-color-primary"
     >
       <div class="text-color-light">
         <h1 class="font-weight-bold padding-bottom-1">
