--- a/src/app/components/company/company-banner/company-banner.component.scss
+++ b/src/app/components/company/company-banner/company-banner.component.scss
@@ -33,6 +33,12 @@
 
 @media (max-width: 767.9px) {
   .company-banner-right {
+    padding: 0 !important;
+  }
+}
+
+@media (max-width: 575.9px) {
+  .company-banner-right {
     padding-right: 2rem !important;
     padding-left: 2rem !important;
     padding-top: 5rem !important;
@@ -54,11 +60,11 @@
     object-position: bottom !important;
   }
 }
-@media (min-width: 768px) and (max-width: 991.9px) {
-  .col-md-8,
-  .col-md-4 {
-    flex: 0 0 50%;
-    max-width: 50%;
+@media (min-width: 576px) and (max-width: 991.9px) {
+  .col-sm-7,
+  .col-sm-5 {
+    flex: 0 0 50% !important;
+    max-width: 50% !important;
   }
 
   .text,
