--- a/src/app/components/home/our-offer/our-offer.component.html
+++ b/src/app/components/home/our-offer/our-offer.component.html
@@ -12,7 +12,7 @@
   <div class="container-fluid">
     <app-tabs>
       <app-tab tabTitle="I'm a manufacturer">
-        <div class="container">
+        <div class="container tab-container">
           <div class="row m-0">
             <div
               class="col-sm d-flex flex-column align-items-center margin-top-3"
@@ -73,7 +73,7 @@
         </div>
       </app-tab>
       <app-tab tabTitle="I'm a consumer">
-        <div class="container">
+        <div class="container tab-container">
           <div class="row m-0">
             <div
               class="col-sm d-flex flex-column align-items-center margin-top-3"
