--- a/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
+++ b/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.html
@@ -2,14 +2,14 @@
   class="container-fluid p-0 height-vp-full spacing-0 background-color-primary"
 >
   <div class="row m-0 height-vp-full">
-    <div class="col-md-8 p-0 image-col">
+    <div class="col-sm-8 p-0 image-col">
       <img
         class="width-100 manufacturers-banner-image height-vp-full"
         src="assets/images/Dashboard.jpg"
       />
     </div>
     <div
-      class="col-md-4 padding-right-5 height-100 d-flex flex-column manufacturers-banner-right text-center"
+      class="col-sm-4 padding-right-5 height-100 d-flex flex-column manufacturers-banner-right text-center"
     >
       <div class="text-color-light">
         <h1 class="font-weight-bold padding-bottom-1">
