--- a/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.scss
+++ b/src/app/components/products/serviceplug/manufacturers/manufacturers-banner/manufacturers-banner.component.scss
@@ -30,8 +30,14 @@
     margin-top: 1.5rem;
   }
 }
-
+/*
 @media (max-width: 767.9px) {
+  .manufacturers-banner-right {
+    padding: 0 !important;
+  }
+}*/
+
+@media (max-width: 575.9px) {
   .manufacturers-banner-right {
     padding-right: 2rem !important;
     padding-left: 2rem !important;
@@ -54,14 +60,14 @@
     object-position: bottom !important;
   }
 }
-@media (min-width: 768px) and (max-width: 991.9px) {
-  .col-md-8 {
-    flex: 0 0 60%;
-    max-width: 60%;
+@media (min-width: 576px) and (max-width: 991.9px) {
+  .col-sm-8 {
+    flex: 0 0 55% !important;
+    max-width: 55% !important;
   }
-  .col-md-4 {
-    flex: 0 0 40%;
-    max-width: 40%;
+  .col-sm-4 {
+    flex: 0 0 45% !important;
+    max-width: 45% !important;
   }
 
   .text,
