--- a/src/app/components/products/consulting/work-with/work-with.component.html
+++ b/src/app/components/products/consulting/work-with/work-with.component.html
@@ -1,7 +1,7 @@
 <div class="container padding-top-6 padding-bottom-6">
   <div class="row justify-content-center margin-bottom-1">
     <h3 class="text-color-primary font-weight-bold">
-      We've worked with the best and brightest
+      We've Worked With The Best And Brightest
     </h3>
   </div>
   <div class="row">
