--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,12 @@
 @import "assets/css/shared/margins.scss";
 @import "assets/css/shared/scrollbars.scss";
 
+a,
+a:active,
+a:focus {
+  outline: none !important;
+}
+
 body {
   overflow-x: hidden !important;
   //width: 100vw !important;
@@ -44,7 +50,8 @@ body {
   border-color: var(--bg-primary-light) !important;
 }
 
-.btn, .form-control {
+.btn,
+.form-control {
   border-radius: 0.5rem !important;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
 }
