--- a/src/assets/css/shared/paddings.scss
+++ b/src/assets/css/shared/paddings.scss
@@ -41,6 +41,18 @@ $spacing: 1rem;
 .padding-left-6 {
   padding-left: $spacing * 6 !important;
 }
+.padding-left-7 {
+  padding-left: $spacing * 7 !important;
+}
+.padding-left-8 {
+  padding-left: $spacing * 8 !important;
+}
+.padding-left-9 {
+  padding-left: $spacing * 9 !important;
+}
+.padding-left-10 {
+  padding-left: $spacing * 10 !important;
+}
 
 // RIGHT PADDINGS
 .padding-right-1 {
@@ -57,6 +69,21 @@ $spacing: 1rem;
 }
 .padding-right-5 {
   padding-right: $spacing * 5 !important;
+}
+.padding-right-6 {
+  padding-right: $spacing * 6 !important;
+}
+.padding-right-7 {
+  padding-right: $spacing * 7 !important;
+}
+.padding-right-8 {
+  padding-right: $spacing * 8 !important;
+}
+.padding-right-9 {
+  padding-right: $spacing * 9 !important;
+}
+.padding-right-10 {
+  padding-right: $spacing * 10 !important;
 }
 
 // TOP PADDINGS
@@ -77,6 +104,15 @@ $spacing: 1rem;
 }
 .padding-top-6 {
   padding-top: $spacing * 6 !important;
+}
+.padding-top-7 {
+  padding-top: $spacing * 7 !important;
+}
+.padding-top-8 {
+  padding-top: $spacing * 8 !important;
+}
+.padding-top-9 {
+  padding-top: $spacing * 9 !important;
 }
 .padding-top-10 {
   padding-top: $spacing * 10 !important;
@@ -100,6 +136,15 @@ $spacing: 1rem;
 }
 .padding-bottom-6 {
   padding-bottom: $spacing * 6 !important;
+}
+.padding-bottom-7 {
+  padding-bottom: $spacing * 7 !important;
+}
+.padding-bottom-8 {
+  padding-bottom: $spacing * 8 !important;
+}
+.padding-bottom-9 {
+  padding-bottom: $spacing * 9 !important;
 }
 .padding-bottom-10 {
   padding-bottom: $spacing * 10 !important;
