--- a/src/app/components/home/home-banner/home-banner.component.html
+++ b/src/app/components/home/home-banner/home-banner.component.html
@@ -1,17 +1,17 @@
-<div class="img-fluid banner-div shadow-sm height-vp-full">
+<div id="home-banner-div" class="img-fluid banner-div shadow-sm background-color-primary">
   <div
-    class="height-100 padding-5 banner-text d-flex flex-column justify-content-center align-items-start"
+    class="padding-5 banner-text d-flex flex-column justify-content-center align-items-start"
   >
     <h1 class="font-weight-bold m-0 text-color-light myma-title">
-      The Science Behind The Appliance.
+      We Turn The Key For IoT
     </h1>
     <h4 class="padding-bottom-1 padding-top-1 text-color-light">
-      We provide both manufacturers and consumers insight into their appliances.
+      myma provides both manufacturers and consumers insight into their appliances.
     </h4>
     <button
       type="button"
       (click)="onMoreClick('products-anchor')"
-      class="btn btn-primary font-weight-bold"
+      class="btn btn-secondary font-weight-bold"
     >
       Learn more
     </button>
