--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,13 @@
 <div>
   <app-home-banner></app-home-banner>
-
   <main>
     <div id="products-anchor"></div>
     <app-home-products></app-home-products>
-    <!--<app-how-it-works></app-how-it-works>-->
-    <app-our-offer></app-our-offer>
+    <div id="home-content">
+      
+      <!--<app-how-it-works></app-how-it-works>-->
+      <app-our-offer></app-our-offer>
+    </div>
   </main>
-
   <app-footer></app-footer>
 </div>
