--- a/src/app/components/home/home-banner/home-banner.component.scss
+++ b/src/app/components/home/home-banner/home-banner.component.scss
@@ -10,9 +10,11 @@
 }
 
 .banner-div {
+  /*
   background-image: url(src/assets/images/serviceplug/shutterstock_1208917930.jpg);
   background-size: cover;
   background-position: center;
+  */
 }
 
 .banner-text {
