--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,9 @@
+@media (min-width: 992px) {
+  #home-content {
+    padding-top: calc(100vh - 80px - 0.3rem);
+  }
+}
+
 #products-anchor {
   transform: translateY(-80px);
 }
